feat(reporter): separate CPIC/DPWG reports
BREAKING CHANGE: this introduces changes to the phenotyper and reporter JSON
files that are not backwards-compatible.